--- a/white-tent.html
+++ b/white-tent.html
@@ -536,7 +536,7 @@
         <div class="w-dyn-list">
             <div role="list" class="w-dyn-items">
                 <div role="listitem" class="w-dyn-item">
-                    <a href="/alert/how-were-responding-to-covid-19" class="banner w-inline-block">
+                    <a href="/announce.html" class="banner w-inline-block">
                         <div class="container">
                             <div class="banner-content-wrapper">
                                 <div class="pill primary alert-bar">Announcement</div>
