--- a/biznus-about2.html
+++ b/biznus-about2.html
@@ -708,7 +708,7 @@
         <div data-collapse="medium" data-animation="over-right" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
             <div class="container">
                 <div class="nav-wrapper">
-                    <a href="/" class="brand w-nav-brand">
+                    <a href="/biznus-home3.html" class="brand w-nav-brand">
                         <img src="https://cdn.prod.website-files.com/5e7ff3ec0c4ef4c974fa99e3/5e7ff57adad44d1f072965b6_logo.svg" alt="Acme Outdoors Logo"></a>
                         <div class="cart-nav-wrapper">
                             <nav role="navigation" class="nav-menu w-nav-menu">
