--- a/biznus-shop2.html
+++ b/biznus-shop2.html
@@ -872,7 +872,7 @@
                     <div role="list" class="products-list w-dyn-items">
                         <div role="listitem" class="w-dyn-item">
                             <div class="shop-item-wrapper">
-                                <a href="/product/gift-card" class="shop-item-link-wrapper w-inline-block">
+                                <a href="/giftcards.html" class="shop-item-link-wrapper w-inline-block">
                                     <div data-wf-sku-bindings="%5B%7B%22from%22%3A%22f_main_image_4dr.url%22%2C%22to%22%3A%22style.background-image%22%7D%5D" style="background-image:url(&quot;https://cdn.prod.website-files.com/5e853c3383474026e43f2c78/5e861d123df4d175e80e8beb_acme-gift-card.jpg&quot;)" class="shop-image tumbler-1 narrow-list">
                                         <div data-wf-sku-conditions="%7B%22condition%22%3A%7B%22fields%22%3A%7B%22default-sku%3Acompare-at-price%22%3A%7B%22exists%22%3A%22yes%22%2C%22type%22%3A%22CommercePrice%22%7D%7D%7D%2C%22timezone%22%3A%22America%2FChicago%22%7D" class="pill-2 badge primary sale w-condition-invisible">Sale</div>
                                     </div>
@@ -893,7 +893,7 @@
                         </div>
                         <div role="listitem" class="w-dyn-item">
                             <div class="shop-item-wrapper">
-                                <a href="/product/tin-coffee-tumbler" class="shop-item-link-wrapper w-inline-block">
+                                <a href="/tin-cofffee.html" class="shop-item-link-wrapper w-inline-block">
                                     <div data-wf-sku-bindings="%5B%7B%22from%22%3A%22f_main_image_4dr.url%22%2C%22to%22%3A%22style.background-image%22%7D%5D" style="background-image:url(&quot;https://cdn.prod.website-files.com/5e853c3383474026e43f2c78/5e8542c1248e59128e08e3e9_ryan-holloway-JyDmUaXMib4-unsplash.jpg&quot;)" class="shop-image tumbler-1 narrow-list">
                                         <div data-wf-sku-conditions="%7B%22condition%22%3A%7B%22fields%22%3A%7B%22default-sku%3Acompare-at-price%22%3A%7B%22exists%22%3A%22yes%22%2C%22type%22%3A%22CommercePrice%22%7D%7D%7D%2C%22timezone%22%3A%22America%2FChicago%22%7D" class="pill-2 badge primary sale w-condition-invisible">Sale</div>
                                     </div>
@@ -914,7 +914,7 @@
                         </div>
                         <div role="listitem" class="w-dyn-item">
                             <div class="shop-item-wrapper">
-                                <a href="/product/blue-canvas-pack" class="shop-item-link-wrapper w-inline-block">
+                                <a href="/blue-canvas.html" class="shop-item-link-wrapper w-inline-block">
                                     <div data-wf-sku-bindings="%5B%7B%22from%22%3A%22f_main_image_4dr.url%22%2C%22to%22%3A%22style.background-image%22%7D%5D" style="background-image:url(&quot;https://cdn.prod.website-files.com/5e853c3383474026e43f2c78/5e85425605cae11f20d46181_denisse-leon-J7CjWufjmg4-unsplash.jpg&quot;)" class="shop-image tumbler-1 narrow-list">
                                         <div data-wf-sku-conditions="%7B%22condition%22%3A%7B%22fields%22%3A%7B%22default-sku%3Acompare-at-price%22%3A%7B%22exists%22%3A%22yes%22%2C%22type%22%3A%22CommercePrice%22%7D%7D%7D%2C%22timezone%22%3A%22America%2FChicago%22%7D" class="pill-2 badge primary sale">Sale</div>
                                     </div>
@@ -935,7 +935,7 @@
                         </div>
                         <div role="listitem" class="w-dyn-item">
                             <div class="shop-item-wrapper">
-                                <a href="/product/green-canvas-pack" class="shop-item-link-wrapper w-inline-block">
+                                <a href="/green-canvas.html" class="shop-item-link-wrapper w-inline-block">
                                     <div data-wf-sku-bindings="%5B%7B%22from%22%3A%22f_main_image_4dr.url%22%2C%22to%22%3A%22style.background-image%22%7D%5D" style="background-image:url(&quot;https://cdn.prod.website-files.com/5e853c3383474026e43f2c78/5e8542198347409e463f436b_jakob-owens-O_bhy3TnSYU-unsplash.jpg&quot;)" class="shop-image tumbler-1 narrow-list">
                                         <div data-wf-sku-conditions="%7B%22condition%22%3A%7B%22fields%22%3A%7B%22default-sku%3Acompare-at-price%22%3A%7B%22exists%22%3A%22yes%22%2C%22type%22%3A%22CommercePrice%22%7D%7D%7D%2C%22timezone%22%3A%22America%2FChicago%22%7D" class="pill-2 badge primary sale w-condition-invisible">Sale</div>
                                     </div>
