--- a/green-canvas.html
+++ b/green-canvas.html
@@ -426,28 +426,187 @@
             background-color: #222;
             color: #f9f9f9;
         }
+        .container {
+            max-width: 1200px;
+            margin-right: auto;
+            margin-left: auto;
+            padding-right: 15px;
+            padding-left: 15px;
+        }
         .page-title {
             margin-top: 10px;
         }
+        h1 {
+            font-size: 38px;
+            line-height: 44px;
+            font-weight: bold;
+            margin-bottom: 10px;
+        }
+        .content-section {
+            padding-top: 65px;
+            padding-bottom: 65px;
+        }
+        .shopping-page-wrapper {
+            display: flex;
+        }
+        .shopping-page-left {
+            width: 40%;
+        }
+        element.style {
+            background-image: url(https://cdn.prod.website-files.com/5e853c3…/5e85421…_jakob-owens-O_bhy3TnSYU-unsplash.jpg);
+        }    
+        .shopping-page-image {
+            position: relative;
+            min-height: 450px;
+            border-radius: 5px;
+            background-position: 50% 50%;
+            background-size: cover;
+        }
+        .pill-2.badge.primary.sale {
+            position: absolute;
+            left: auto;
+            top: 4%;
+            right: 2%;
+            bottom: auto;
+            border-radius: 5px;
+            background-color: #eb5757;
+            font-size: 14px;
+            text-transform: uppercase;
+        }
+        .pill-2 {
+            margin-right: 10px;
+            padding: 5px 20px;
+            color: #f9f9f9;
+        }
+        .w-condition-invisible {
+            display: none !important;
+        }
+        .shipping-page-right {
+            width: 60%;
+            padding-left: 60px;
+        }
+        .page-product-headin {
+            margin-top: 0px;
+        }
         h2 {
-            margin-top: 20px;
             margin-bottom: 10px;
             font-size: 32px;
             line-height: 36px;
             font-weight: bold;
         }
-        p {
-            margin-top: 0;
+        .page-price-wrapping {
+            display: flex;
             margin-bottom: 10px;
-        }
-        h4 {
             font-size: 18px;
-            line-height: 24px;
-            margin-top: 10px;
-            font-weight: bold;
-            margin-bottom: 10px;
         }
-        .footer {
+        .shop-item-price-page {
+            margin-right: 10px;
+            color: #222;
+            font-size: 16px;
+            font-weight: 700;
+            text-align: left;
+        }
+        .shop-item-price-page.compare-at {
+            color: #eb5757;
+            text-decoration: line-through;
+        }
+        .shop-item-price-page {
+            margin-right: 10px;
+            font-size: 16px;
+            font-weight: 700;
+            text-align: left;
+        }
+        .w-condition-invisible {
+            display: none !important;
+        }
+        .w-commerce-commerceaddtocartform {
+            margin-top: 0px;
+            margin-right: 0px;
+            margin-bottom: 15px;
+            margin-left: 0px;
+        }
+        label {
+            display: block;
+            margin-bottom: 5px;
+            font-weight: 400;
+        }
+        .add-to-cart-page-wrapper {
+            display: flex;
+            margin-top: 15px;
+        }
+        .input.cart-quantity {
+            margin-right: 5px;
+            margin-bottom: 0px;
+        }
+        .input {
+            border: 1px solid #222;
+            border-radius: 5px;
+            color: inherit;
+            font: inherit;
+            margin: 0;
+        }
+        .w-commerce-commerceaddtocartquantityinput {
+            background-color: #fafafa;
+            display: block;
+            height: 38px;
+            line-height: 20px;
+            padding-top: 8px;
+            padding-right: 6px;
+            padding-bottom: 8px;
+            padding-left: 12px;
+            width: 60px;
+            appearance: none;
+        }
+        .btn.outline {
+            background-color: transparent;
+            color: #eb5757;
+        }
+        .btn {
+            padding: 5px 25px;
+            border-style: solid;
+            border-width: 1px;
+            border-color: #eb5757;
+            border-radius: 5px;
+            transition: border-color 300ms ease, background-color 300ms ease;
+            font-weight: 700;
+        }
+        .w-commerce-commerceaddtocartbutton {
+            cursor: pointer;
+            text-decoration: none;
+            display: flex;
+            -webkit-box-align: center;
+            align-items: center;
+            appearance: none;
+        }
+        .w-commerce-commerceaddtocartoutofstock {
+            margin-top: 10px;
+            padding-top: 10px;
+            padding-bottom: 10px;
+            padding-left: 10px;
+            padding-right: 10px;
+            background-color: #ddd;
+        }
+        .w-commerce-commerceaddtocarterror {
+            margin-top: 10px;
+            padding-top: 10px;
+            padding-bottom: 10px;
+            padding-left: 10px;
+            padding-right: 10px;
+            background-color: #ffdede;
+        }
+        .w-widget-twitter {
+            overflow: hidden;
+        }
+        .w-widget {
+            position: relative;
+        }
+        element.style {
+            border: none;
+            width: 81px;
+            height: 28px;
+            overflow: hidden;
+        }
+         .footer {
             padding-top: 65px;
             padding-bottom: 10px;
             background-color: #222;
@@ -459,22 +618,15 @@
             -webkit-box-align: center;
             align-items: center;
         }
-        .w-inline-block {
+        img {
             max-width: 100%;
+            vertical-align: middle;
             display: inline-block;
-        }
-        a {
-            color: #eb5757;
-            text-decoration: underline;
-            background-color: transparent;
+            border: 0;
         }
         .social-footer-link {
             margin-left: 20px;
             transition: all 300ms ease;
-        }
-        .w-inline-block {
-            max-width: 100%;
-            display: inline-block;
         }
         .footer-bottom-wrapper {
             margin-top: 55px;
@@ -487,6 +639,11 @@
         .small {
             margin-bottom: 10px;
         }
+        a {
+            color: #eb5757;
+            text-decoration: underline;
+            background-color: transparent;
+        }
 
 
     </style>
@@ -496,7 +653,7 @@
         <div class="w-dyn-list">
             <div role="list" class="w-dyn-items">
                 <div role="listitem" class="w-dyn-item">
-                    <a href="/alert/how-were-responding-to-covid-19" class="banner w-inline-block">
+                    <a href="/announce.html" class="banner w-inline-block">
                         <div class="container">
                             <div class="banner-content-wrapper">
                                 <div class="pill primary alert-bar">Announcement</div>
@@ -641,42 +798,76 @@
 
 <div class="page-title-section">
     <div class="container">
-        <h1 class="page-title">How we're responding to COVID-19</h1>
+        <h1 class="page-title">Green Canvas Pack</h1>
     </div>
 </div>
 <div class="content-section">
     <div class="container">
-        <div class="w-richtext">
-            <h2>What’s a Rich Text element?</h2>
-            <p>The rich text element allows you to create and format headings, paragraphs, blockquotes, images, and video all in one place instead of having to add and format them individually. Just double-click and easily create content.</p>
-            <h4>Static and dynamic content editing</h4>
-            <p>A rich text element can be used with static or dynamic content. For static content, just drop it into any page and begin editing. For dynamic content, add a rich text field to any collection and then connect a rich text element to that field in the settings panel. Voila!</p>
-            <h4>How to customize formatting for each rich text</h4>
-            <p>Headings, paragraphs, blockquotes, figures, images, and figure captions can all be styled after a class is added to the rich text element using the "When inside of" nested selector system.</p>
-            <p>‍</p>
-        </div>
-    </div>
-</div>
-<div class="footer">
-    <div class="container">
-        <div class="footer-wrapper">
-            <div class="footer-logo-column">
-                <a href="/" class="w-inline-block">
-                    <img src="https://cdn.prod.website-files.com/5e7ff3ec0c4ef4c974fa99e3/5e7ff57adad44d1f072965b6_logo.svg" alt="Acme Outdoors Logo"></a>
+        <div class="shopping-page-wrapper">
+            <div class="shopping-page-left">
+                <div data-wf-sku-bindings="%5B%7B%22from%22%3A%22f_main_image_4dr.url%22%2C%22to%22%3A%22style.background-image%22%7D%5D" style="background-image:url(&quot;https://cdn.prod.website-files.com/5e853c3383474026e43f2c78/5e8542198347409e463f436b_jakob-owens-O_bhy3TnSYU-unsplash.jpg&quot;)" class="shopping-page-image"><div data-wf-sku-conditions="%7B%22condition%22%3A%7B%22fields%22%3A%7B%22default-sku%3Acompare-at-price%22%3A%7B%22exists%22%3A%22yes%22%2C%22type%22%3A%22CommercePrice%22%7D%7D%7D%2C%22timezone%22%3A%22America%2FChicago%22%7D" class="pill-2 badge primary sale w-condition-invisible">Sale</div></div>
+            </div>
+            <div class="shipping-page-right">
+                <h2 class="page-product-headin">Green Canvas Pack</h2>
+                <div class="page-price-wrapping">
+                    <div data-wf-sku-bindings="%5B%7B%22from%22%3A%22f_price_%22%2C%22to%22%3A%22innerHTML%22%7D%5D" class="shop-item-price-page">$&nbsp;125.00&nbsp;USD</div>
+                    <div data-wf-sku-bindings="%5B%7B%22from%22%3A%22f_compare_at_price_7dr10dr%22%2C%22to%22%3A%22innerHTML%22%7D%5D" data-wf-sku-conditions="%7B%22condition%22%3A%7B%22fields%22%3A%7B%22default-sku%3Acompare-at-price%22%3A%7B%22exists%22%3A%22yes%22%2C%22type%22%3A%22CommercePrice%22%7D%7D%7D%2C%22timezone%22%3A%22America%2FChicago%22%7D" class="shop-item-price-page compare-at w-condition-invisible w-dyn-bind-empty"></div>
                 </div>
                 <div>
-                    <a href="https://twitter.com/webflow" target="_blank" class="social-footer-link w-inline-block">
-                        <img src="https://cdn.prod.website-files.com/5e7ff3ec0c4ef4c974fa99e3/5e8407a25b6234aeec960fb9_Twitter_Social_Icon_Rounded_Square_White.svg" width="30" alt="Twitter Logo"></a>
-                        <a href="https://www.facebook.com/webflow" class="social-footer-link w-inline-block">
-                            <img src="https://cdn.prod.website-files.com/5e7ff3ec0c4ef4c974fa99e3/5e8407aa3fb6cf5576f1658b_Facebook%20Logo.svg" width="30" alt="Facebook Logo"></a>
-                            <a href="https://www.instagram.com/webflow/" target="_blank" class="social-footer-link w-inline-block">
-                                <img src="https://cdn.prod.website-files.com/5e7ff3ec0c4ef4c974fa99e3/5e840774014326b74bbeeeb6_Insta.svg" width="30" alt="Instagram Logo"></a>
-                            </div>
+                    <form data-node-type="commerce-add-to-cart-form" data-commerce-sku-id="5e861d45022dd3619ea90064" data-loading-text="Adding to cart..." data-commerce-product-id="5e861d4511e8ae22e0f08ccb" class="w-commerce-commerceaddtocartform">
+                        <label for="quantity-8342fe54ad998bceba4bd86dd02b8e79">Quantity</label>
+                        <div class="add-to-cart-page-wrapper">
+                            <input type="number" pattern="^[0-9]+$" inputmode="numeric" id="quantity-8342fe54ad998bceba4bd86dd02b8e79" name="commerce-add-to-cart-quantity-input" min="1" class="w-commerce-commerceaddtocartquantityinput input cart-quantity" value="1">
+                            <input type="submit" data-node-type="commerce-add-to-cart-button" data-loading-text="Adding to cart..." aria-busy="false" aria-haspopup="dialog" class="w-commerce-commerceaddtocartbutton btn outline" value="Add to Cart"></div>
+                        </form>
+                        <div style="display:none" class="w-commerce-commerceaddtocartoutofstock" tabindex="0">
+                            <div>This product is out of stock.</div>
                         </div>
-                        <div class="footer-bottom-wrapper">
-                            <div class="small footer-small">Made In <a href="https://webflow.com" target="_blank">Webflow</a>. © 2020.</div>
+                        <div aria-live="" data-node-type="commerce-add-to-cart-error" style="display:none" class="w-commerce-commerceaddtocarterror">
+                            <div data-node-type="commerce-add-to-cart-error" data-w-add-to-cart-quantity-error="Product is not available in this quantity." data-w-add-to-cart-general-error="Something went wrong when adding this item to the cart." data-w-add-to-cart-mixed-cart-error="You can’t purchase another product with a subscription." data-w-add-to-cart-buy-now-error="Something went wrong when trying to purchase this item." data-w-add-to-cart-checkout-disabled-error="Checkout is disabled on this site." data-w-add-to-cart-select-all-options-error="Please select an option in each set.">Product is not available in this quantity.</div>
+                        </div>
+                    </div>
+                    <div class="w-richtext">
+                        <h2>What’s a Rich Text element?</h2>
+                        <p>The rich text element allows you to create and format headings, paragraphs, blockquotes, images, and video all in one place instead of having to add and format them individually. Just double-click and easily create content.</p>
+                        <h4>Static and dynamic content editing</h4>
+                        <p>A rich text element can be used with static or dynamic content. For static content, just drop it into any page and begin editing. For dynamic content, add a rich text field to any collection and then connect a rich text element to that field in the settings panel. Voila!</p>
+                        <h4>How to customize formatting for each rich text</h4>
+                        <p>Headings, paragraphs, blockquotes, figures, images, and figure captions can all be styled after a class is added to the rich text element using the "When inside of" nested selector system.</p><p>‍</p></div>
+                        <div>
+                            <h3 class="page-product-headin">Tweet about #AcmeOutdoors products</h3>
+                            <div class="w-widget w-widget-twitter">
+                                <iframe title="Twitter Tweet Button" src="//platform.twitter.com/widgets/tweet_button.html#url=http%3A%2F%2Fbiznus-template.io&amp;counturl=biznus-template.io&amp;text=You'll%20love%20the%20product%20from%20Acme%20Outdoors!&amp;show_count=false&amp;dnt=true&amp;size=l&amp;width=81&amp;height=28" frameborder="0" scrolling="no" allowtransparency="true" style="border:none;width:81px;height:28px;overflow:hidden"></iframe>
+                            </div>
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+     <div class="footer">
+        <div class="container">
+            <div class="footer-wrapper">
+                <div class="footer-logo-column">
+                    <a href="/" class="w-inline-block">
+                        <img src="https://cdn.prod.website-files.com/5e7ff3ec0c4ef4c974fa99e3/5e7ff57adad44d1f072965b6_logo.svg" alt="Acme Outdoors Logo">
+                    </a>
+                </div>
+                <div>
+                    <a href="https://twitter.com/webflow" target="_blank" class="social-footer-link w-inline-block">
+                        <img src="https://cdn.prod.website-files.com/5e7ff3ec0c4ef4c974fa99e3/5e8407a25b6234aeec960fb9_Twitter_Social_Icon_Rounded_Square_White.svg" width="30" alt="Twitter Logo">
+                    </a>
+                    <a href="https://www.facebook.com/webflow" class="social-footer-link w-inline-block">
+                        <img src="https://cdn.prod.website-files.com/5e7ff3ec0c4ef4c974fa99e3/5e8407aa3fb6cf5576f1658b_Facebook%20Logo.svg" width="30" alt="Facebook Logo">
+                    </a>
+                    <a href="https://www.instagram.com/webflow/" target="_blank" class="social-footer-link w-inline-block">
+                        <img src="https://cdn.prod.website-files.com/5e7ff3ec0c4ef4c974fa99e3/5e840774014326b74bbeeeb6_Insta.svg" width="30" alt="Instagram Logo">
+                    </a>
+                </div>
+            </div>
+            <div class="footer-bottom-wrapper">
+                <div class="small footer-small">Made In <a href="https://webflow.com" target="_blank">Webflow</a>. © 2020.</div>
+            </div>
+        </div>
+    </div>    
 </body>
 </html>
